lib/physics/src/jolt_ffi_generated.dart


  late final ffi.Pointer<Dart_CurrentIsolate_Type> _Dart_CurrentIsolate_DL =
      _lookup<Dart_CurrentIsolate_Type>('Dart_CurrentIsolate_DL');

  Dart_CurrentIsolate_Type get Dart_CurrentIsolate_DL =>
      _Dart_CurrentIsolate_DL.value;

  set Dart_CurrentIsolate_DL(Dart_CurrentIsolate_Type value) =>
      _Dart_CurrentIsolate_DL.value = value;

  late final ffi.Pointer<Dart_ExitIsolate_Type> _Dart_ExitIsolate_DL =
      _lookup<Dart_ExitIsolate_Type>('Dart_ExitIsolate_DL');

  Dart_ExitIsolate_Type get Dart_ExitIsolate_DL => _Dart_ExitIsolate_DL.value;

  set Dart_ExitIsolate_DL(Dart_ExitIsolate_Type value) =>
      _Dart_ExitIsolate_DL.value = value;

  late final ffi.Pointer<Dart_EnterIsolate_Type> _Dart_EnterIsolate_DL =
      _lookup<Dart_EnterIsolate_Type>('Dart_EnterIsolate_DL');

  Dart_EnterIsolate_Type get Dart_EnterIsolate_DL =>
      _Dart_EnterIsolate_DL.value;

  set Dart_EnterIsolate_DL(Dart_EnterIsolate_Type value) =>
      _Dart_EnterIsolate_DL.value = value;

  late final ffi.Pointer<Dart_Post_Type> _Dart_Post_DL =
      _lookup<Dart_Post_Type>('Dart_Post_DL');

  Dart_Post_Type get Dart_Post_DL => _Dart_Post_DL.value;

  set Dart_Post_DL(Dart_Post_Type value) => _Dart_Post_DL.value = value;

  late final ffi.Pointer<Dart_NewSendPort_Type> _Dart_NewSendPort_DL =
      _lookup<Dart_NewSendPort_Type>('Dart_NewSendPort_DL');

  Dart_NewSendPort_Type get Dart_NewSendPort_DL => _Dart_NewSendPort_DL.value;

  set Dart_NewSendPort_DL(Dart_NewSendPort_Type value) =>
      _Dart_NewSendPort_DL.value = value;

  late final ffi.Pointer<Dart_SendPortGetId_Type> _Dart_SendPortGetId_DL =
      _lookup<Dart_SendPortGetId_Type>('Dart_SendPortGetId_DL');

  Dart_SendPortGetId_Type get Dart_SendPortGetId_DL =>
      _Dart_SendPortGetId_DL.value;

  set Dart_SendPortGetId_DL(Dart_SendPortGetId_Type value) =>
      _Dart_SendPortGetId_DL.value = value;

  late final ffi.Pointer<Dart_EnterScope_Type> _Dart_EnterScope_DL =
      _lookup<Dart_EnterScope_Type>('Dart_EnterScope_DL');

  Dart_EnterScope_Type get Dart_EnterScope_DL => _Dart_EnterScope_DL.value;

  set Dart_EnterScope_DL(Dart_EnterScope_Type value) =>
      _Dart_EnterScope_DL.value = value;

  late final ffi.Pointer<Dart_ExitScope_Type> _Dart_ExitScope_DL =
      _lookup<Dart_ExitScope_Type>('Dart_ExitScope_DL');

  Dart_ExitScope_Type get Dart_ExitScope_DL => _Dart_ExitScope_DL.value;

  set Dart_ExitScope_DL(Dart_ExitScope_Type value) =>
      _Dart_ExitScope_DL.value = value;

  late final ffi.Pointer<Dart_IsNull_Type> _Dart_IsNull_DL =
      _lookup<Dart_IsNull_Type>('Dart_IsNull_DL');

  Dart_IsNull_Type get Dart_IsNull_DL => _Dart_IsNull_DL.value;

  set Dart_IsNull_DL(Dart_IsNull_Type value) => _Dart_IsNull_DL.value = value;

  late final ffi.Pointer<Dart_UpdateExternalSize_Type>
      _Dart_UpdateExternalSize_DL =
      _lookup<Dart_UpdateExternalSize_Type>('Dart_UpdateExternalSize_DL');

  Dart_UpdateExternalSize_Type get Dart_UpdateExternalSize_DL =>
      _Dart_UpdateExternalSize_DL.value;

  set Dart_UpdateExternalSize_DL(Dart_UpdateExternalSize_Type value) =>
      _Dart_UpdateExternalSize_DL.value = value;

  late final ffi.Pointer<Dart_UpdateFinalizableExternalSize_Type>
      _Dart_UpdateFinalizableExternalSize_DL =
      _lookup<Dart_UpdateFinalizableExternalSize_Type>(
          'Dart_UpdateFinalizableExternalSize_DL');

  Dart_UpdateFinalizableExternalSize_Type
      get Dart_UpdateFinalizableExternalSize_DL =>
          _Dart_UpdateFinalizableExternalSize_DL.value;

  set Dart_UpdateFinalizableExternalSize_DL(
          Dart_UpdateFinalizableExternalSize_Type value) =>
      _Dart_UpdateFinalizableExternalSize_DL.value = value;

  /// World.
  ffi.Pointer<World> create_world() {
    return _create_world();
  }

  late final _create_worldPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<World> Function()>>(
          'create_world');
  late final _create_world =
      _create_worldPtr.asFunction<ffi.Pointer<World> Function()>();

  /// NOTE: There is only one instance of a BodyConfig available right now.
  ffi.Pointer<BodyConfig> world_get_body_config(
    ffi.Pointer<World> world,
  ) {
    return _world_get_body_config(
      world,
    );
  }

  late final _world_get_body_configPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<BodyConfig> Function(
              ffi.Pointer<World>)>>('world_get_body_config');
  late final _world_get_body_config = _world_get_body_configPtr
      .asFunction<ffi.Pointer<BodyConfig> Function(ffi.Pointer<World>)>();

  ffi.Pointer<WorldBody> world_create_body(
    ffi.Pointer<World> world,
    ffi.Pointer<BodyConfig> conifg,
  ) {
    return _world_create_body(
      world,
      conifg,
    );
  }

  late final _world_create_bodyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<WorldBody> Function(ffi.Pointer<World>,
              ffi.Pointer<BodyConfig>)>>('world_create_body');
  late final _world_create_body = _world_create_bodyPtr.asFunction<
      ffi.Pointer<WorldBody> Function(
          ffi.Pointer<World>, ffi.Pointer<BodyConfig>)>();

  void world_add_body(
    ffi.Pointer<World> world,
    ffi.Pointer<WorldBody> body,
    int activation,
  ) {
    return _world_add_body(
      world,
      body,
      activation,
    );
  }

  late final _world_add_bodyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<World>, ffi.Pointer<WorldBody>,
              ffi.Int)>>('world_add_body');
  late final _world_add_body = _world_add_bodyPtr.asFunction<
      void Function(ffi.Pointer<World>, ffi.Pointer<WorldBody>, int)>();

  void world_remove_body(
    ffi.Pointer<World> world,
    ffi.Pointer<WorldBody> body,
  ) {
    return _world_remove_body(
      world,
      body,
    );
  }

  late final _world_remove_bodyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<World>,
              ffi.Pointer<WorldBody>)>>('world_remove_body');
  late final _world_remove_body = _world_remove_bodyPtr
      .asFunction<void Function(ffi.Pointer<World>, ffi.Pointer<WorldBody>)>();

  int world_step(
    ffi.Pointer<World> world,
    double dt,
  ) {
    return _world_step(
      world,
      dt,
    );
  }

  late final _world_stepPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<World>, ffi.Float)>>(
      'world_step');
  late final _world_step =
      _world_stepPtr.asFunction<int Function(ffi.Pointer<World>, double)>();

  void destroy_world(
    ffi.Pointer<World> world,
  ) {
    return _destroy_world(
      world,
    );
  }

  late final _destroy_worldPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<World>)>>(
          'destroy_world');
  late final _destroy_world =
      _destroy_worldPtr.asFunction<void Function(ffi.Pointer<World>)>();

  /// NOTE: There is only one instance of a ConvexShapeConfig available right now.
  ffi.Pointer<ConvexShapeConfig> get_convex_shape_config() {
    return _get_convex_shape_config();
  }

  late final _get_convex_shape_configPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ConvexShapeConfig> Function()>>(
          'get_convex_shape_config');
  late final _get_convex_shape_config = _get_convex_shape_configPtr
      .asFunction<ffi.Pointer<ConvexShapeConfig> Function()>();

  ffi.Pointer<CollisionShape> create_convex_shape(
    ffi.Pointer<ConvexShapeConfig> config,
    ffi.Pointer<ffi.Float> points,
    int num_points,
  ) {
    return _create_convex_shape(
      config,
      points,
      num_points,
    );
  }

  late final _create_convex_shapePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CollisionShape> Function(ffi.Pointer<ConvexShapeConfig>,
              ffi.Pointer<ffi.Float>, ffi.Int)>>('create_convex_shape');
  late final _create_convex_shape = _create_convex_shapePtr.asFunction<
      ffi.Pointer<CollisionShape> Function(ffi.Pointer<ConvexShapeConfig>,
          ffi.Pointer<ffi.Float>, int)>(isLeaf: true);

  /// NOTE: There is only one instance of a CompoundShapeConfig available right now.
  ffi.Pointer<CompoundShapeConfig> get_compound_shape_config() {
    return _get_compound_shape_config();
  }

  late final _get_compound_shape_configPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CompoundShapeConfig> Function()>>(
          'get_compound_shape_config');
  late final _get_compound_shape_config = _get_compound_shape_configPtr
      .asFunction<ffi.Pointer<CompoundShapeConfig> Function()>();

  ffi.Pointer<CollisionShape> create_compound_shape(
    ffi.Pointer<CompoundShapeConfig> config,
  ) {
    return _create_compound_shape(
      config,
    );
  }

  late final _create_compound_shapePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CollisionShape> Function(
              ffi.Pointer<CompoundShapeConfig>)>>('create_compound_shape');
  late final _create_compound_shape = _create_compound_shapePtr.asFunction<
      ffi.Pointer<CollisionShape> Function(ffi.Pointer<CompoundShapeConfig>)>();

  ffi.Pointer<CollisionShape> create_mesh_shape(
    ffi.Pointer<ffi.Float> vertices,
    int num_vertices,
    ffi.Pointer<ffi.Uint32> triangles,
    int num_triangles,
  ) {
    return _create_mesh_shape(
      vertices,
      num_vertices,
      triangles,
      num_triangles,
    );
  }

  late final _create_mesh_shapePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CollisionShape> Function(ffi.Pointer<ffi.Float>, ffi.Int,
              ffi.Pointer<ffi.Uint32>, ffi.Int)>>('create_mesh_shape');
  late final _create_mesh_shape = _create_mesh_shapePtr.asFunction<
      ffi.Pointer<CollisionShape> Function(
          ffi.Pointer<ffi.Float>, int, ffi.Pointer<ffi.Uint32>, int)>();

  void shape_get_center_of_mass(
    ffi.Pointer<CollisionShape> shape,
    ffi.Pointer<ffi.Float> v3,
  ) {
    return _shape_get_center_of_mass(
      shape,
      v3,
    );
  }

  late final _shape_get_center_of_massPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<CollisionShape>,
              ffi.Pointer<ffi.Float>)>>('shape_get_center_of_mass');
  late final _shape_get_center_of_mass =
      _shape_get_center_of_massPtr.asFunction<
          void Function(ffi.Pointer<CollisionShape>, ffi.Pointer<ffi.Float>)>();

  void shape_get_local_bounds(
    ffi.Pointer<CollisionShape> shape,
    ffi.Pointer<ffi.Float> min3,
    ffi.Pointer<ffi.Float> max3,
  ) {
    return _shape_get_local_bounds(
      shape,
      min3,
      max3,
    );
  }

  late final _shape_get_local_boundsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<CollisionShape>, ffi.Pointer<ffi.Float>,
              ffi.Pointer<ffi.Float>)>>('shape_get_local_bounds');
  late final _shape_get_local_bounds = _shape_get_local_boundsPtr.asFunction<
      void Function(ffi.Pointer<CollisionShape>, ffi.Pointer<ffi.Float>,
          ffi.Pointer<ffi.Float>)>();

  void shape_set_dart_owner(
    ffi.Pointer<CollisionShape> shape,
    Object owner,
  ) {
    return _shape_set_dart_owner(
      shape,
      owner,
    );
  }

  late final _shape_set_dart_ownerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<CollisionShape>,
              ffi.Handle)>>('shape_set_dart_owner');
  late final _shape_set_dart_owner = _shape_set_dart_ownerPtr
      .asFunction<void Function(ffi.Pointer<CollisionShape>, Object)>();

  Object shape_get_dart_owner(
    ffi.Pointer<CollisionShape> shape,
  ) {
    return _shape_get_dart_owner(
      shape,
    );
  }

  late final _shape_get_dart_ownerPtr = _lookup<
          ffi.NativeFunction<ffi.Handle Function(ffi.Pointer<CollisionShape>)>>(
      'shape_get_dart_owner');
  late final _shape_get_dart_owner = _shape_get_dart_ownerPtr
      .asFunction<Object Function(ffi.Pointer<CollisionShape>)>();

  void destroy_shape(
    ffi.Pointer<CollisionShape> shape,
  ) {
    return _destroy_shape(
      shape,
    );
  }
